--- a/app/invoicecreation/webapp/view/ASNReportDetail.view.xml
+++ b/app/invoicecreation/webapp/view/ASNReportDetail.view.xml
@@ -108,7 +108,7 @@
 					<Table id="AccTableDataId" items="{accdetailModel>/results}" mode="SingleSelectMaster"
 						sticky="ColumnHeaders">
 						<columns>
-							<Column minScreenWidth="Tablet" demandPopin="true" width="10rem">
+							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
 								<Text text="Account Code"/>
 							</Column>
 							<Column minScreenWidth="Tablet" demandPopin="true" width="10rem">
@@ -117,19 +117,19 @@
 							<Column minScreenWidth="Tablet" demandPopin="true" width="10rem">
 								<Text text="Balance Amt ({detailModel>/DocumentRows/results/0/CurrencyCode})"/>
 							</Column>
-							<Column minScreenWidth="Tablet" demandPopin="true" width="12rem">
+							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
 								<Text text="Account Type"/>
 							</Column>
-							<Column minScreenWidth="Tablet" demandPopin="true" width="12rem">
+							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
 								<Text text="Bill Number"/>
 							</Column>
-							<Column minScreenWidth="Tablet" demandPopin="true" width="12rem">
+							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
 								<Text text="Bill Date"/>
 							</Column>
-							<Column minScreenWidth="Tablet" demandPopin="true" width="12rem">
+							<Column minScreenWidth="Tablet" demandPopin="true" width="10rem">
 								<Text text="Voucher Number"/>
 							</Column>
-							<Column minScreenWidth="Tablet" demandPopin="true" width="12rem">
+							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
 								<Text text="TRN Date"/>
 							</Column>
 							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
@@ -138,13 +138,13 @@
 							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
 								<Text text="Particulars"/>
 							</Column>
-							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
+							<Column minScreenWidth="Tablet" demandPopin="true" width="6rem">
 								<Text text="Flag"/>
 							</Column>
-							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
+							<Column minScreenWidth="Tablet" demandPopin="true" width="6rem">
 								<Text text="Type"/>
 							</Column>
-							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
+							<Column minScreenWidth="Tablet" demandPopin="true" width="6rem">
 								<Text text="Gst"/>
 							</Column>
 							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
@@ -158,8 +158,8 @@
 							<ColumnListItem id="acctableTempId">
 								<cells>
 									<Text text="{accdetailModel>AccountCode}"/>
-									<Text text="{path:'accdetailModel>AccountDescription',formatter:'sap.fiori.invoicecreation.controller.formatter.formatAmount'}"/>
-									<Text text="{accdetailModel>BalanceAmount}"/>
+									<Text text="{accdetailModel>AccountDescription}"/>
+									<Text text="{path:'accdetailModel>BalanceAmount',formatter:'sap.fiori.invoicecreation.controller.formatter.formatAmount'}"/>
 									<Text text="{accdetailModel>AccountType}"/>
 									<Text text="{accdetailModel>BillNumber}"/>
 									<Text text="{accdetailModel>Billdate}"/>
