upload button change

--- a/app/invoicecreation/webapp/view/ASNReportDetail.view.xml
+++ b/app/invoicecreation/webapp/view/ASNReportDetail.view.xml
@@ -200,6 +200,8 @@
 				<upload:UploadSet
 					id="uploadSet"
 					instantUpload="false"
+					uploadButtonInvisible="true"
+					uploadEnabled="false"
                     afterItemAdded="onAfterItemAdded"
 					uploadCompleted="onUploadCompleted"
 				>
