--- a/app/invoicecreation/webapp/view/ASNReportView.view.xml
+++ b/app/invoicecreation/webapp/view/ASNReportView.view.xml
@@ -37,11 +37,11 @@
 									<DatePicker id="mrnendDateId" valueFormat="yyyyMMdd" value="{localModel>/MRNEndDate}" class="disablekb"/>
 								</fb:control>
 							</fb:FilterItem>
-							<fb:FilterItem name="G" label="Plant" mandatory="true">
+							<!-- <fb:FilterItem name="G" label="Plant" mandatory="true">
 								<fb:control>
 									<Input id="PlantId" value="{localModel>/Plant}" enabled="false"/>
 								</fb:control>
-							</fb:FilterItem>
+							</fb:FilterItem> -->
 							
 							<fb:FilterItem name="H" label="Invoice Status" mandatory="true">
 								<fb:control>
